--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lint:create": "eslint --init"
   },
   "dependencies": {
     "ant-design-vue": "^1.7.4",
@@ -25,13 +26,26 @@
     "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "husky": "^6.0.0",
     "less": "^4.1.1",
     "less-loader": "7.3.0",
+    "lint-staged": "^11.0.0",
     "node-sass": "^4.12.0",
     "postcss": "^8.2.8",
     "postcss-loader": "^5.2.0",
     "postcss-preset-env": "^6.7.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn precommit"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
